cmake_minimum_required(VERSION 3.26)
project(chapter7)

set(CMAKE_CXX_STANDARD 14)

add_executable(chapter7
        calling.cpp)
add_executable(protos protos.cpp)
add_executable(twoarg.cpp twoarg.cpp)
add_executable(lotto lotto.cpp)
add_executable(arrfun1 arrfun1.cpp)
add_executable(arrfun2 arrfun2.cpp)
add_executable(arrfun3 arrfun3.cpp)
add_executable(arrfun4 arrfun4.cpp)
add_executable(strfun strfun.cpp)
add_executable(strgback strgback.cpp)
add_executable(travel travel.cpp)
add_executable(strtfun strtfun.cpp)
add_executable(strcptr strcptr.cpp)
add_executable(topfive travel.cpp)
add_executable(arrobj arrobj.cpp)
add_executable(recur recur.cpp)
add_executable(ruler ruler.cpp)
add_executable(fun_ptr fun_ptr.cpp)
add_executable(arfupt arfupt.cpp)
