cmake_minimum_required(VERSION 3.26)
project(ch10hw )

set(CMAKE_C_STANDARD 11)

add_executable(use1 use1.cpp 1.cpp 1.h)
add_executable(use2 use2.cpp 2.cpp 2.h)
add_executable(use3 use3.cpp 3.cpp 3.h)
add_executable(use4 use4.cpp 4.cpp 4.h)
add_executable(use5 use5.cpp 5.cpp 5.h)
add_executable(use6 use6.cpp 6.cpp 6.h)
add_executable(use7 use7.cpp 7.cpp 7.h)
add_executable(use8 use8.cpp 8.cpp 8.h)