cmake_minimum_required(VERSION 3.26)
project(ch7hw)

set(CMAKE_CXX_STANDARD 14)

add_executable(ch7hw
        1.cpp)

add_executable(2 2.cpp)
add_executable(3 3.cpp)
add_executable(4 4.cpp)
add_executable(5 5.cpp)
add_executable(6 6.cpp)
add_executable(7 7.cpp)
add_executable(8 8.cpp)
add_executable(9 9.cpp)
add_executable(bieren bieren9.cpp)
add_executable(10 10.cpp)
add_executable(gpt gpt.cpp)
